--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: null
-title: Crónicas de un observador en serie
-description: "El órgano con el que he comprendido el mundo ha sido el ojo". (J. W. Goethe)
+title: "Crónicas de un observador en serie"
+description: ""El órgano con el que he comprendido el mundo ha sido el ojo". (J. W. Goethe)"
 sitemap:
     priority: 1.0
     lastmod: 2017-11-02
